--- a/style.css
+++ b/style.css
@@ -55,7 +55,15 @@ nav ul{
 .banner-content{
     max-width: 580px;
 }
-
+/* shared style */
+.secondary-bg{
+    background-color: #FFF8F3;
+}
+/* Main styles */
+main{
+    max-width: 1140px;
+    margin: 0 auto;
+}
 /* color related style */
 .color-01{
     color: #FD6E0A;
@@ -76,7 +84,7 @@ nav ul{
     background-color: white;
 
 }
-/* button-rrelated-style */
+/* button-related-style */
 .button-01{
     background-color: #FD6E0A;
     padding: 18px 35px;
@@ -95,4 +103,31 @@ nav ul{
 }
 .banner-profile-picture{
     width: 580;
+}
+/* section */
+.section-title{
+    font-size: 35px;
+    font-weight: 700;
+    color: #181818;
+}
+.section-description{
+    font-size: 18px;
+    font-weight: 400;
+    color: #757575;
+}
+/* about style */
+.about{
+    border-radius: 10px;
+    padding: 130px 150px;
+    margin-top: 130px;
+}
+.about-items{
+    display: flex;
+    justify-content: space-around;
+}
+.about-item{
+    align-items: center;
+}
+.item-despription{
+    font-weight: 600;
 }
