--- a/style.css
+++ b/style.css
@@ -64,6 +64,10 @@ main{
     max-width: 1140px;
     margin: 0 auto;
 }
+main section{
+    margin-top: 130px;
+    margin-bottom: 130px;
+}
 /* color related style */
 .color-01{
     color: #FD6E0A;
@@ -109,6 +113,7 @@ main{
     font-size: 35px;
     font-weight: 700;
     color: #181818;
+    text-align: center;
 }
 .section-description{
     font-size: 18px;
@@ -116,10 +121,10 @@ main{
     color: #757575;
 }
 /* about style */
+
 .about{
     border-radius: 10px;
     padding: 130px 150px;
-    margin-top: 130px;
 }
 .about-items{
     display: flex;
@@ -130,4 +135,14 @@ main{
 }
 .item-despription{
     font-weight: 600;
+}
+/* skills section starts here */
+.skills-container{
+display: flex;
+gap: 24px;
+}
+.skills{
+    padding: 30px;
+    box-shadow: 0px 6px 50px 0px rgba(0,0,0,0.06);
+    border-radius: 5px;
 }
