--- a/style.css
+++ b/style.css
@@ -146,3 +146,51 @@ gap: 24px;
     box-shadow: 0px 6px 50px 0px rgba(0,0,0,0.06);
     border-radius: 5px;
 }
+
+/* A summary of My Resume sextion starts here  */
+.resume{
+    font-weight: 700;
+    font-size: 35px;
+}
+.resume-container{
+     display: flex;
+     gap: 24px;
+}
+.experience-description,.experience-subtitle{
+    color: #757575;
+}
+.experience-subtitle{
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 20px;
+}
+.resume hr{
+    margin: 30px 5px;
+}
+.text-center{
+    text-align: center;
+}
+.resume-download-cv{
+    margin-top: 50px;
+}
+/* A summary of My Resume sextion ends here  */
+
+/* Footer section starts here */
+footer{
+    padding: 130px 230px;
+    display: flex;
+    gap: 100px;
+}
+.footer-column{
+    width: 50%;
+
+}
+footer input[type="text"],footer input[type="email"],footer textarea{
+    height: 64px;
+    border-radius: 5px;
+    background-color: #ffffff;
+    padding: 10px 20px;
+    margin-bottom: 24px;
+    border: none;
+}
+/* Footer section ends here */
